--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,16 +79,16 @@
   }
 }
 
-.test {
+.logo-animation {
   background-image: url("/assets/img/logo/charactor/elen.png");
   background-repeat: repeat-x;
-  animation-name: test;
+  animation-name: logo-animation;
   animation-duration: 60s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
 }
 
-@keyframes test {
+@keyframes logo-animation {
   0% {
     background-position: 0 0;
   }
