--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,3 +67,33 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities {
+  .hidden-scrollbar {
+    -ms-overflow-style: none; /* IE, Edge 対応 */
+    scrollbar-width: none; /* Firefox 対応 */
+  }
+  .hidden-scrollbar::-webkit-scrollbar {
+    /* Chrome, Safari 対応 */
+    display: none;
+  }
+}
+
+.logo-animation {
+  background-image: url("/assets/img/logo/charactor/elen.png");
+  background-repeat: repeat-x;
+  animation-name: logo-animation;
+  animation-duration: 60s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+@keyframes logo-animation {
+  0% {
+    background-position: 0 0;
+  }
+
+  100% {
+    background-position: 1500px 0;
+  }
+}
